--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.cdnfonts.com/css/sf-pro-display"); */
+@import url("https://fonts.cdnfonts.com/css/sf-pro-display");
 
 body {
   margin: 0;
